--- a/R_markdown_practice.Rmd
+++ b/R_markdown_practice.Rmd
@@ -62,3 +62,31 @@ dim(iris)
 ```
 
 Finally, find other help at https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf
+
+## 9/28/18: in-class exercise:
+Data types discussion #3:
+
+1. What attributes does a data frame possess?
+Names, dimensions, and class; accessed as names(x), dim(x), and class(x) respectively.
+Or, structure (as str(x)) for the whole structure.
+I.e., 
+```{r}
+df<- data.frame(x=1:3, y=c("a","b","c"))
+names(df)
+dim(df)
+class(df)
+str(df)
+```
+
+2. What does as.matrix() do when applied to a data frame with columns of different types?
+
+```{r}
+df.matrix <- as.matrix(df)
+df.matrix
+```
+It coerces into a character matrix so that all columns can be the same type.
+
+3. Can you have a data frame with 0 rows / columns?
+```{r}
+(df.empty <- data.frame())
+```
